--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,29 +6,44 @@
     </div>
     <div class="body_layout">
       <div class="iteams">
-        <h1>Expertise in Data Engineering on Cloud</h1>
+        <div class="ul-head">
+          <img src="../../assets/video-call.png" style="width: 10%" alt="" />
+          <h1>Expertise in Data Engineering on Cloud</h1>
+        </div>
         <ul>
           <li>
-            Data Engineering pipeline – Architecture,<br />
-            Orchestration, Optimization and Monitoring
+            Data Engineering pipeline – Architecture,<br />Orchestration,
+            Optimization and Monitoring
           </li>
           <li>Databricks, Apache Airflow</li>
           <li>Big Data - Apache Spark, Hadoop, HDFS</li>
           <li>DWH - Google BigQuery, Snowflake and DBT</li>
         </ul>
         <ul class="socila-media">
-          <li>Aws</li>
-          <li>Google cloud</li>
-          <li>Asure</li>
+          <li>
+            <img src="../../assets/aws.png" alt="" />
+          </li>
+          <li><img src="../../assets/cloud.png" alt="" /></li>
+          <li><img src="../../assets/azure.png" alt="" /></li>
         </ul>
       </div>
       <div class="iteams">
-        <h1>Consultancy</h1>
-        <h1>
-          Engagement Partner for Business <br />
-          Opportunities
-        </h1>
-        <div class="domain-name">www.sankir.com</div>
+        <div class="iteam">
+          <img src="../../assets/biki.png" alt="" />
+          <h1>Consultancy</h1>
+        </div>
+        <div class="iteam">
+          <img src="../../assets/operator.png" alt="" />
+          <h1>
+            Engagement Partner for Business <br />
+            Opportunities
+          </h1>
+        </div>
+
+        <div class="domain-name">
+          <img src="../../assets/world-wide-web.png" alt="" />
+          <h1>www.sankir.com</h1>
+        </div>
       </div>
     </div>
   </div>
@@ -39,8 +54,11 @@
     <div class="head">
       <h1>Consultancy</h1>
     </div>
-    <div class="body-layout">
+    <div class="ul-head">
+      <img src="../../assets/video-call.png" width="5%" alt="" />
       <h1>Solution Architecture</h1>
+    </div>
+    <div class="body_layout">
       <div class="iteams">
         <ul>
           <li>
@@ -72,7 +90,7 @@
           <li>SanKir aims to align with Client’s Core Business Objectives</li>
         </ul>
       </div>
-      <div class="items">
+      <div class="iteams">
         <ul>
           <li>
             PoC on Data Engineering pipeline
@@ -88,8 +106,10 @@
 
 <section class="cloud_service_solutions">
   <div class="container">
-    <div class="body-layout">
+    <div class="head">
       <h1>Consultancy in following Cloud Services and Solution</h1>
+    </div>
+    <div class="body_layout">
       <div class="iteams">
         <h1>AWS</h1>
         <ul>
@@ -170,8 +190,10 @@
 
 <section class="data_engineer_solution">
   <div class="container">
-    <div class="body_layout">
+    <div class="head">
       <h1>Consultancy in following Data Engineering Tools and Solution</h1>
+    </div>
+    <div class="body_layout">
       <div class="iteams">
         <h1>Databricks</h1>
         <ul>
@@ -272,35 +294,37 @@
 
 <section class="engagement_partner">
   <div class="container">
-    <h1>SanKir as Engagement Partner for Business Opportunities</h1>
+    <div class="head">
+      <h1>SanKir as Engagement Partner for Business Opportunities</h1>
+    </div>
     <div class="body_layout">
       <ul>
-        <li>
+        <li class="prnt_li">
           Architecting the Solution for Client’s Potential Business
           opportunities
           <ul>
-            <li>
+            <li class="child_li">
               Recommendation on right choice of Cloud vendor, Data Pipeline
-              Tools and services and<br />
-              Cloud Data Warehouse based on Client requirements
+              Tools and services and<br />Cloud Data Warehouse based on Client
+              requirements
             </li>
           </ul>
         </li>
-        <li>Execute PoC to win a Project deal</li>
-        <li>
+        <li class="prnt_li">Execute PoC to win a Project deal</li>
+        <li class="prnt_li">
           Customized technology upskill program for Corporate professionals
           <ul>
-            <li>
+            <li class="child_li">
               Enable Client to showcase their team’s skills for resourcing
               opportunities
             </li>
-            <li>Hans-on sessions with PoC project</li>
+            <li class="child_li">Hans-on sessions with PoC project</li>
           </ul>
         </li>
-        <li>
+        <li class="prnt_li">
           Joint Go-To-Market Strategy
           <ul>
-            <li>
+            <li class="child_li">
               SanKir can partner with Client from initial bid stage to
               Architecting the Solution to<br />
               Project Execution
@@ -314,31 +338,36 @@
 
 <section class="why_sankir">
   <div class="container">
-    <h1>Why sankir</h1>
+    <div class="head">
+      <h1>Why sankir</h1>
+    </div>
     <div class="body_layout">
       <ul>
-        <li>
+        <li class="prnt_li">
           Differentiator in Pricing
           <ul>
-            <li>
+            <li class="child_li">
               Competitive pricing compared to Cloud vendor’s professional
               services
             </li>
-            <li>Aim to deliver within Client’s Budget</li>
+            <li class="child_li">Aim to deliver within Client’s Budget</li>
           </ul>
         </li>
-        <li>
+        <li class="prnt_li">
           Hands-on Technical skills
           <ul>
-            <li>
+            <li class="child_li">
               Data Engineering pipeline – Architecture, Orchestration,
               Optimization and Monitoring
             </li>
           </ul>
         </li>
-        <li>Industry Experience in Multitude of Data Projects</li>
+        <li class="prnt_li">
+          Industry Experience in Multitude of Data Projects
+        </li>
       </ul>
       <div class="data_solve">
+        <img src="../../assets/video-call.png" style="width: 5%" alt="" />
         <h4>Let SanKir own your Data Problems</h4>
       </div>
     </div>
@@ -346,5 +375,53 @@
 </section>
 
 <section class="proof">
-  <div class="conainer"></div>
+  <div class="container">
+    <div class="head">
+      <h1>Proof of Work - PoC</h1>
+    </div>
+    <div class="body_layout">
+      <ul>
+        <li>
+          PoCs done for Clients
+          <ul>
+            <li>
+              E2E DE Pipeline - Retail data set transformation using Spark, S3,
+              AWS EMR, Athena
+              <ul>
+                <li>Convert Data into consumable format</li>
+                <li>Business Insights - KPIs</li>
+                <li>
+                  Data Profiling – Column profile detail & Data quality metrics
+                </li>
+              </ul>
+            </li>
+            <li>
+              Orchestration using Airflow for Ed-Fi operational store used in
+              K-12 Education
+              <ul>
+                <li>Dynamic DAGs</li>
+                <li>Schedule and monitoring of task-groups and tasks</li>
+              </ul>
+            </li>
+            <li>
+              Data Engineering using built-in and scalable Azure Databricks
+              platform
+              <ul>
+                <li>Infra creation ( Spark Cluster ) – compute sizing</li>
+                <li>Data Transformation, Best practice using Key vaults</li>
+              </ul>
+            </li>
+            <li>
+              Designing Data pipeline for ETH blockchain using Airflow and AWS
+              EMR
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <h4>
+        Cost of Cloud Infrastructure of PoC for the Organization will be very
+        minimal
+      </h4>
+    </div>
+  </div>
 </section>
