--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,600;0,800;0,900;1,400;1,500;1,700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,500&display=swap");
 * {
   margin: 0;
   padding: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 body {
   margin: 0;
   color: #fff;
+  background-color: #595959;
 }
 .container {
   margin: 0 10rem;
-  background-color: rgb(44, 43, 43);
-  padding: 0 2rem 2rem;
-  box-shadow: 3px 6px 11px 2px #000;
+  background-color: #595959;
+  padding: 0 2rem 5rem;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.616);
 }
 h1,
 h2,
