new look Update

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,29 @@
-<section class="cloud">
-  <div class="container">
+<nav>
+  <div class="container-fluid">
     <div class="heading">
       <h1>Sankir Technology</h1>
       <h2>Accelerating <span> Data Engineering </span> Solution on Cloud</h2>
+      <ul>
+        <li>
+          <a href="#Architecture"
+            >Consultancy <i class="fa fa-caret-down"></i
+          ></a>
+          <ul>
+            <li><a href="#cloud_service">Cloud Services</a></li>
+            <li><a href="#data_engineer">Data Engineering Tools</a></li>
+          </ul>
+        </li>
+
+        <li><a href="#engagement_partner">Business Opportunities</a></li>
+        <li><a href="#why_sankir">WHY sankir</a></li>
+        <li><a href="#proof">PoC</a></li>
+      </ul>
     </div>
+  </div>
+</nav>
+
+<section class="cloud" id="cloud">
+  <div class="container">
     <div class="body_layout">
       <div class="iteams">
         <div class="ul-head">
@@ -11,10 +31,7 @@
           <h1>Expertise in Data Engineering on Cloud</h1>
         </div>
         <ul>
-          <li>
-            Data Engineering pipeline – Architecture,<br />Orchestration,
-            Optimization and Monitoring
-          </li>
+          <li>Data Engineering pipeline – Architecture, Orchestration,</li>
           <li>Databricks, Apache Airflow</li>
           <li>Big Data - Apache Spark, Hadoop, HDFS</li>
           <li>DWH - Google BigQuery, Snowflake and DBT</li>
@@ -49,7 +66,7 @@
   </div>
 </section>
 
-<section class="Architecture">
+<section class="Architecture" id="Architecture">
   <div class="container">
     <div class="head">
       <h1>Consultancy</h1>
@@ -104,10 +121,10 @@
   </div>
 </section>
 
-<section class="cloud_service_solutions">
+<section class="cloud_service_solutions" id="cloud_service">
   <div class="container">
     <div class="head">
-      <h1>Consultancy in following Cloud Services and Solution</h1>
+      <h1>Cloud Services and Solution</h1>
     </div>
     <div class="body_layout">
       <div class="iteams">
@@ -188,10 +205,10 @@
   </div>
 </section>
 
-<section class="data_engineer_solution">
+<section class="data_engineer_solution" id="data_engineer">
   <div class="container">
     <div class="head">
-      <h1>Consultancy in following Data Engineering Tools and Solution</h1>
+      <h1>Data Engineering Tools and Solution</h1>
     </div>
     <div class="body_layout">
       <div class="iteams">
@@ -292,7 +309,7 @@
   </div>
 </section>
 
-<section class="engagement_partner">
+<section class="engagement_partner" id="engagement_partner">
   <div class="container">
     <div class="head">
       <h1>SanKir as Engagement Partner for Business Opportunities</h1>
@@ -336,7 +353,7 @@
   </div>
 </section>
 
-<section class="why_sankir">
+<section class="why_sankir" id="why_sankir">
   <div class="container">
     <div class="head">
       <h1>Why sankir</h1>
@@ -374,7 +391,7 @@
   </div>
 </section>
 
-<section class="proof">
+<section class="proof" id="proof">
   <div class="container">
     <div class="head">
       <h1>Proof of Work - PoC</h1>
