--- a/src/veriable.scss
+++ b/src/veriable.scss
@@ -1,1 +1,8 @@
-$primarycolor: #d5ee00;
+$backgroundbox-color: #1f485a;
+$backgroundcolor: #05121a;
+$background-color-second: #0b1419;
+
+$primary-text-color: #1282d7;
+$nav-background: #05121a;
+$white-text-color: #fff;
+$backcolor: #000;
