--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "/src/veriable.scss";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,500&display=swap");
 * {
   margin: 0;
@@ -7,14 +8,17 @@
 }
 body {
   margin: 0;
-  color: #fff;
-  background-color: #595959;
+  color: rgb(0, 0, 0);
+  background-color: #031f30;
+}
+section {
+  border-bottom: 1px solid $primary-text-color;
 }
 .container {
-  margin: 0 10rem;
-  background-color: #595959;
-  padding: 0 2rem 5rem;
-  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.616);
+  margin: 0 3rem;
+}
+.container-fluid {
+  margin: 0 3rem;
 }
 h1,
 h2,
