--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -13,17 +13,19 @@
     color: $primary-text-color;
     font-size: 1.7rem;
     font-weight: 500;
+    padding-bottom: 1rem;
   }
 }
 
 @mixin head {
   padding: 1rem;
   text-align: center;
+  margin-bottom: 3rem;
   h1 {
     padding: 1rem 5rem;
     color: $white-text-color;
     display: inline;
-    font-size: 2.2rem;
+    font-size: 4rem;
   }
 }
 
@@ -33,7 +35,7 @@
     list-style: none;
     line-height: 2.2rem;
     font-size: 1.2rem;
-    color: $white-text-color;
+    color: $li-color;
     @include boolet;
   }
 }
