--- a/src/veriable.scss
+++ b/src/veriable.scss
@@ -1,8 +1,9 @@
 $backgroundbox-color: #1f485a;
-$backgroundcolor: #05121a;
+$backgroundcolor: #f0faff;
 $background-color-second: #0b1419;
 
-$primary-text-color: #1282d7;
-$nav-background: #05121a;
-$white-text-color: #fff;
+$primary-text-color: #2c76dc;
+$nav-background: #ffffff;
+$white-text-color: rgb(0, 0, 0);
 $backcolor: #000;
+$li-color: #485c77;
