--- a/src/veriable.scss
+++ b/src/veriable.scss
@@ -7,3 +7,4 @@ $nav-background: #ffffff;
 $white-text-color: rgb(0, 0, 0);
 $backcolor: #000;
 $li-color: #485c77;
+$primari-background-color: #002c96;
