--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,72 +1,50 @@
 @import "../../veriable.scss";
 @import "../../mixin.scss";
-nav {
-  background-color: $nav-background;
-  border-bottom: 3px solid $primary-text-color;
-  .heading {
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem 0;
-    align-items: center;
+.banner {
+  // background-color: #000;
+  .carousel-item {
+    background-color: #002c96;
+    // background-color: rgb(119, 198, 243);
+    padding: 25rem;
+    border-bottom-right-radius: 200px;
+    .carousel-caption {
+      background: linear-gradient(
+        130.76deg,
+        rgba(152, 136, 233, 0.1) 15.8%,
+        rgba(90, 69, 194, 0) 75.08%
+      );
+      border-top-left-radius: 50px;
+      padding: 5rem 0;
+      .info {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
 
-    h1 {
-      color: #fff;
-      background-color: $backgroundbox-color;
-      padding: 0.2rem 1rem;
-    }
-    h2 {
-      color: $white-text-color;
-      span {
-        color: $primary-text-color;
-      }
-    }
-    ul {
-      li {
-        list-style: none;
-        display: inline;
-        padding: 1rem;
-        position: relative;
-        text-decoration: none;
-        transition-duration: 0.5s;
-        a {
-          color: $li-color;
-          font-size: 1rem;
+        h5 {
+          font-size: 4rem;
+          text-align: left;
+          padding-bottom: 2rem;
+          padding-left: 5rem;
         }
-        ul {
-          background: $primary-text-color;
-          visibility: hidden;
-          opacity: 0;
-          width: 200%;
-          position: absolute;
-          transition: all 0.5s ease;
-          margin-top: 1rem;
-          display: none;
-          padding: 1rem 0;
-          li {
-            display: block;
-            line-height: 1rem;
-            padding: 1rem;
-            a {
-              color: #fff;
-            }
-            &:hover a {
-              color: $li-color;
-            }
-            &:hover {
-              background-color: #fff;
-            }
+        .pra {
+          padding-left: 3rem;
+          h5 {
+            font-size: 4rem;
+            text-align: left;
+            padding-bottom: 2rem;
+            padding-left: 0;
+          }
+          ul {
+            padding: 0;
+            text-align: left;
           }
         }
       }
     }
-    ul li:hover > ul,
-    ul li ul:hover {
-      visibility: visible;
-      opacity: 1;
-      display: block;
-    }
   }
 }
+
 .cloud {
   padding: 8rem 5rem 8rem;
   background-color: rgba(214, 238, 252, 0.568);
@@ -151,34 +129,28 @@ nav {
 .Architecture {
   padding: 3rem 5rem 5rem;
   .head {
-    @include head;
-  }
-  .ul-head {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    column-gap: 1rem;
-
+    padding-bottom: 4rem;
     h1 {
-      font-size: 2rem;
-      font-weight: 500;
-      color: $primary-text-color;
+      font-family: "Poppins", sans-serif;
+      margin-top: 0;
+      margin-bottom: 0;
+      font-weight: 400;
+      color: #3d3d3d;
+      letter-spacing: 0;
+      text-align: center;
     }
   }
+
   .body_layout {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: stretch;
     justify-items: flex-start;
-    .iteams {
+    column-gap: 1rem;
+    .items {
+      width: 100%;
       h1 {
-        color: $primary-text-color;
-        font-size: 1.6rem;
-        font-weight: 500;
-        padding-bottom: 1.5rem;
-      }
-      ul {
-        @include list;
+        font-size: 1.3rem;
       }
     }
   }
@@ -187,33 +159,61 @@ nav {
 .cloud_service_solutions {
   padding: 3rem 5rem 5rem;
   background-color: $backgroundcolor;
+  border-bottom-right-radius: 200px;
   .head {
-    @include head;
+    padding-bottom: 2rem;
+    h1 {
+      font-family: "Poppins", sans-serif;
+      margin-top: 0;
+      margin-bottom: 0;
+      font-weight: 400;
+      color: #3d3d3d;
+      letter-spacing: 0;
+      text-align: center;
+    }
   }
   .body_layout {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: stretch;
     justify-items: flex-start;
+    column-gap: 2rem;
     .iteams {
       padding-top: 2rem;
-      h1 {
-        color: $primary-text-color;
-        font-size: 1.6rem;
-        font-weight: 800;
-        padding-bottom: 1.5rem;
-        text-align: center;
-        letter-spacing: 1px;
-      }
-      ul {
-        @include list;
-      }
-      .socila-media {
-        li {
-          padding-right: 3rem;
-          display: inline;
-          &::before {
-            display: none;
+      width: 100%;
+      .card {
+        height: 100%;
+        border: none;
+        box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+        .heads {
+          background-color: #344f00;
+          padding: 2rem;
+          box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+
+          h1 {
+            color: $nav-background;
+            font-size: 1.6rem;
+            font-weight: 800;
+            text-align: center;
+            letter-spacing: 1px;
+          }
+        }
+        .card-body {
+          ul {
+            padding-left: 2rem;
+            li {
+              font-size: 1.1rem;
+              list-style: none;
+              line-height: 2rem;
+              &::before {
+                content: "\2022";
+                color: $primary-text-color;
+                font-weight: bold;
+                display: inline-block;
+                width: 1em;
+                margin-left: -1em;
+              }
+            }
           }
         }
       }
@@ -224,25 +224,60 @@ nav {
 .data_engineer_solution {
   padding: 3rem 5rem 5rem;
   .head {
-    @include head;
+    padding-bottom: 2rem;
+    h1 {
+      font-family: "Poppins", sans-serif;
+      margin-top: 0;
+      margin-bottom: 0;
+      font-weight: 400;
+      color: #3d3d3d;
+      letter-spacing: 0;
+      text-align: center;
+    }
   }
   .body_layout {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: stretch;
     justify-items: flex-start;
+    column-gap: 2rem;
     .iteams {
       padding-top: 2rem;
-      h1 {
-        color: $primary-text-color;
-        font-size: 1.6rem;
-        font-weight: 800;
-        padding-bottom: 1.5rem;
-        text-align: center;
-        letter-spacing: 1px;
-      }
-      ul {
-        @include list;
+      .card {
+        height: 600px;
+        overflow: hidden;
+        .heads {
+          background-color: #000;
+          padding: 2rem;
+          box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+
+          h1 {
+            color: $nav-background;
+            font-size: 1.6rem;
+            font-weight: 800;
+            text-align: center;
+            letter-spacing: 1px;
+          }
+        }
+        .card-body {
+          overflow-y: scroll;
+          ul {
+            padding-left: 2rem;
+            li {
+              font-size: 1.1rem;
+              list-style: none;
+              line-height: 2rem;
+              &::before {
+                content: "\2022";
+                color: $primary-text-color;
+                font-weight: bold;
+                display: inline-block;
+                width: 1em;
+                margin-left: -1em;
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -255,57 +290,26 @@ nav {
     @include head;
   }
   .body_layout {
-    padding-top: 6rem;
-    ul {
-      @include list;
-    }
-  }
-}
-
-.why_sankir {
-  padding: 3rem 5rem 5rem;
-  .head {
-    @include head;
-  }
-  .body_layout {
-    padding-top: 6rem;
-    .data_solve {
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 5rem 0 0;
-      column-gap: 1rem;
-
-      h4 {
-        font-size: 1.5rem;
-        color: $primary-text-color;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: stretch;
+    justify-items: center;
+    column-gap: 2rem;
+    row-gap: 2rem;
+    .items {
+      width: 100%;
+      .card {
+        height: 100%;
+        h1 {
+          font-size: 1.2rem;
+          text-align: center;
+          padding: 1rem;
+        }
+        p {
+          font-size: 0.8rem;
+          padding: 2rem;
+        }
       }
-    }
-    ul {
-      padding-left: 5rem;
-      @include list;
-    }
-  }
-}
-
-.proof {
-  padding: 3rem 5rem 5rem;
-  background-color: $backgroundcolor;
-  .head {
-    @include head;
-  }
-  .body_layout {
-    padding-top: 6rem;
-    h4 {
-      font-style: italic;
-      font-size: 1.2rem;
-      font-weight: 400;
-      text-align: center;
-      color: $white-text-color;
-    }
-    ul {
-      @include list;
     }
   }
 }
