--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,7 +2,7 @@
 @import "../../mixin.scss";
 footer {
   padding: 5rem 0;
-  background-color: #002c96;
+  background-color: #050a30;
   color: #fff;
   .footer_body {
     display: grid;
