--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="container-fluid">
     <div class="heading">
-      <h1>Sankir Technologies</h1>
+      <h1><a href="">Sankir Technologies</a></h1>
       <h2>Accelerating <span> Data Engineering </span> Solution on Cloud</h2>
       <ul>
         <li>
