--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,10 +3,10 @@
 .banner {
   // background-color: #000;
   .carousel-item {
-    background-color: #002c96;
+    background-color: #262f75;
     // background-color: rgb(119, 198, 243);
     padding: 25rem;
-    border-bottom-right-radius: 200px;
+    // border-bottom-right-radius: 200px;
     .carousel-caption {
       background: linear-gradient(
         130.76deg,
@@ -40,85 +40,23 @@
             text-align: left;
           }
         }
-      }
-    }
-  }
-}
-
-.cloud {
-  padding: 8rem 5rem 8rem;
-  background-color: rgba(214, 238, 252, 0.568);
-  .body_layout {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: stretch;
-    justify-items: flex-start;
-    column-gap: 12rem;
-    .iteams {
-      .ul-head {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        column-gap: 1rem;
-
-        @include h1_group;
-      }
-
-      .iteam {
-        padding-bottom: 5rem;
-        img {
-          width: 10%;
-        }
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        column-gap: 1rem;
-        @include h1_group;
-      }
-      .domain-name {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        column-gap: 3rem;
-        padding-top: 0rem;
-        h1 {
-          color: $primary-text-color;
-          font-size: 1.7rem;
-          font-weight: 500;
-          padding-bottom: 1.5rem;
-          border-top: 1px solid;
-          width: 80%;
-          text-align: center;
-          padding: 2rem 0 0rem;
-          font-size: 2rem;
-          margin-top: 5rem;
-        }
-        img {
-          width: 10%;
-        }
-      }
-      ul {
-        padding-left: 10rem;
-        li {
-          list-style: none;
-          line-height: 2.2rem;
-          font-size: 1.2rem;
-          padding-bottom: 1rem;
-          color: $white-text-color;
-          @include boolet;
-        }
-      }
-      .socila-media {
-        padding-top: 5rem;
-        padding-left: 4rem;
-        li {
-          padding-right: 3rem;
-          display: inline;
-          &::before {
-            display: none;
+        .wrap {
+          h5 {
+            font-size: 4rem;
+            text-align: left;
+            padding-bottom: 2rem;
+            padding-left: 3rem;
           }
-          img {
-            width: 20%;
+          ul {
+            text-align: left;
+            padding-left: 5rem;
+            li {
+              font-size: 1rem;
+              line-height: 1.5rem;
+            }
+            ul {
+              padding-left: 2rem;
+            }
           }
         }
       }
@@ -126,31 +64,105 @@
   }
 }
 
-.Architecture {
-  padding: 3rem 5rem 5rem;
-  .head {
-    padding-bottom: 4rem;
-    h1 {
-      font-family: "Poppins", sans-serif;
-      margin-top: 0;
-      margin-bottom: 0;
-      font-weight: 400;
-      color: #3d3d3d;
-      letter-spacing: 0;
-      text-align: center;
-    }
-  }
+.hero_wrap {
+  background-color: #262f75;
+  border-bottom-right-radius: 200px;
+  .Architecture {
+    padding: 3rem 5rem 5rem;
+    background-color: #fff;
+    border-bottom-left-radius: 200px;
+    border-top-right-radius: 200px;
 
-  .body_layout {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: stretch;
-    justify-items: flex-start;
-    column-gap: 1rem;
-    .items {
-      width: 100%;
+    .head {
+      padding-bottom: 4rem;
       h1 {
-        font-size: 1.3rem;
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 400;
+        color: #3d3d3d;
+        letter-spacing: 0;
+        text-align: center;
+      }
+    }
+
+    .body_layout {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      align-items: stretch;
+      justify-items: flex-start;
+      column-gap: 1rem;
+      .items {
+        width: 100%;
+        background-color: #000c66;
+        padding: 2rem;
+        box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+        h1 {
+          font-size: 1.3rem;
+          padding-bottom: 1rem;
+          text-align: center;
+          color: #fff;
+        }
+        ul {
+          padding-left: 2rem;
+          li {
+            color: #fff;
+            line-height: 2rem;
+            font-size: 1rem;
+          }
+        }
+      }
+    }
+  }
+  .clients {
+    padding: 5rem;
+
+    .head {
+      padding-bottom: 4rem;
+      h1 {
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 400;
+        color: #ffffff;
+        letter-spacing: 0;
+        text-align: center;
+      }
+    }
+    .body_layout {
+      .heads {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        background-color: #000c66;
+        padding: 2rem 1rem;
+        column-gap: 2rem;
+
+        h1 {
+          font-size: 1.2rem;
+          color: #fff;
+        }
+      }
+      .body_info {
+        .items {
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+          justify-items: center;
+          column-gap: 2rem;
+          padding: 2rem 1rem;
+          background-color: #ffffff;
+          img {
+            width: 100%;
+            height: 150px;
+          }
+          h1 {
+            font-size: 1.2rem;
+            line-height: 2rem;
+          }
+        }
+        .items:nth-child(even) {
+          background-color: #7ec8e3;
+        }
       }
     }
   }
@@ -160,6 +172,8 @@
   padding: 3rem 5rem 5rem;
   background-color: $backgroundcolor;
   border-bottom-right-radius: 200px;
+  border-top-left-radius: 200px;
+
   .head {
     padding-bottom: 2rem;
     h1 {
@@ -186,7 +200,7 @@
         border: none;
         box-shadow: 0 0 10px rgb(0 0 0 / 10%);
         .heads {
-          background-color: #344f00;
+          background-color: #000c66;
           padding: 2rem;
           box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 
@@ -230,24 +244,20 @@
       margin-top: 0;
       margin-bottom: 0;
       font-weight: 400;
-      color: #3d3d3d;
+      color: #ffffff;
       letter-spacing: 0;
       text-align: center;
     }
   }
   .body_layout {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: stretch;
-    justify-items: flex-start;
-    column-gap: 2rem;
     .iteams {
       padding-top: 2rem;
       .card {
         height: 600px;
         overflow: hidden;
+        border-radius: 0;
         .heads {
-          background-color: #000;
+          background-color: #000c66;
           padding: 2rem;
           box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 
